trainings api
